--- a/8-sidecar.yml
+++ b/8-sidecar.yml
@@ -12,3 +12,6 @@ spec:
     - name: logger
       image: busybox
       command: ["sh","-c","tail -f /data"]
+  volumes:
+    - name: shared
+      emptyDir: {}
