solve broken files

--- a/10-network-policy.yml
+++ b/10-network-policy.yml
@@ -5,7 +5,7 @@ metadata:
 spec:
   podSelector:
     matchLabels:
-      name: backend
+      app: backend
   ingress:
     - from:
         - podSelector:
