--- a/3-deployment.yml
+++ b/3-deployment.yml
@@ -16,7 +16,7 @@ spec:
         disk: ssd
       tolerations:
         - key: "critical"
-          operator: "Equal"
+          operator: "="
           effect: "NoSchedule"
       containers:
         - name: api
